tests/chainsaw/require-run-as-non-root-user/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-root-user
spec:
  securityContext:
    runAsUser: 0
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
