tests/chainsaw/require-run-as-non-root-user/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod-non-root-user
spec:
  securityContext:
    runAsUser: 1000
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      allowPrivilegeEscalation: false
      runAsNonRoot: true
      seccompProfile:
        type: RuntimeDefault
      capabilities:
        drop:
        - ALL
