tests/chainsaw/require-run-as-non-root-user/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-run-as-non-root-user
spec:
  steps:
  - name: create a bad pod running as root user
    try:
    - create:
        expect:
        - check:
            ($error != null): true
        file: bad-pod.yaml
  - name: create a good pod with non-root user
    try:
    - create:
        expect:
        - check:
            ($error != null): false
        file: good-pod.yaml
